Fix table overflowing page in Menus and Deliver

--- a/src/client/css-styles/styles-deliver.css
+++ b/src/client/css-styles/styles-deliver.css
@@ -1,3 +1,7 @@
+.main {
+    overflow-y: scroll;
+}
+
 #page-wrapper {
     padding-left: 7%;
     padding-right: 7%;
