--- a/src/client/css-styles/styles-menus.css
+++ b/src/client/css-styles/styles-menus.css
@@ -1,3 +1,7 @@
+.main {
+    overflow-y: scroll;
+}
+
 #menu-wrapper {
     padding-left: 7%;
     padding-right: 7%;
